dataset1235/2025-2/1153765216/users/230013788/executions/3138746197_854576230.log
== SUBMISSION (2025-08-12 20:26:17)
-- CODE: 
print(.upper)(Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper)(Ada Lovelace foi a primeira programadora da historia")
                                                                      ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper)(Ada Lovelace foi a primeira programadora da historia")
                                                                      ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:36:29)
-- CODE: 
  print(.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:38:15)
-- CODE: 
  print(.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:27:06)
-- CODE: 
print(.upper "Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper "Ada Lovelace foi a primeira programadora da historia")
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper "Ada Lovelace foi a primeira programadora da historia")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:26:41)
-- CODE: 
print(".upperAda Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
.upperAda Lovelace foi a primeira programadora da historia
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
.upperAda Lovelace foi a primeira programadora da historia
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:11:38)
-- CODE: 
print(.upper("Ada Lovelace foi a primeira programadora da historia.".lower)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia.".lower)
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia.".lower)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:37:05)
-- CODE: 
  print(.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:13:16)
-- CODE: 
print(.upper(Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada Lovelace foi a primeira programadora da historia")
                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada Lovelace foi a primeira programadora da historia")
                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:37:31)
-- CODE: 
  print(.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:10:53)
-- CODE: 
print(upper)(Ada Lovelace foi a primeira programadora da historia.))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper)(Ada Lovelace foi a primeira programadora da historia.))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper)(Ada Lovelace foi a primeira programadora da historia.))
                                                                       ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:30:21)
-- CODE: 
  print(.upper(Ada lovelace foi a primeira programadora da historia.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada lovelace foi a primeira programadora da historia.")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada lovelace foi a primeira programadora da historia.")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:26:19)
-- CODE: 
print(.upper)(Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper)(Ada Lovelace foi a primeira programadora da historia")
                                                                      ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper)(Ada Lovelace foi a primeira programadora da historia")
                                                                      ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:26:53)
-- CODE: 
print(".upper(Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
.upper(Ada Lovelace foi a primeira programadora da historia
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
.upper(Ada Lovelace foi a primeira programadora da historia
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 20:49:40)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia."
frase_maiuscula = frase.upper()
print(frase_maiuscula)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:13:14)
-- CODE: 
print(.upper(Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada Lovelace foi a primeira programadora da historia")
                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada Lovelace foi a primeira programadora da historia")
                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:10:49)
-- CODE: 
print(.upper("Ada Lovelace foi a primeira programadora da historia.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia.")
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia.")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:28:05)
-- CODE: 
  print(.upper(Ada Lovelace foi a promeira programadora da historia"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada Lovelace foi a promeira programadora da historia"))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada Lovelace foi a promeira programadora da historia"))
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:10:51)
-- CODE: 
print(upper)(Ada Lovelace foi a primeira programadora da historia.))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper)(Ada Lovelace foi a primeira programadora da historia.))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper)(Ada Lovelace foi a primeira programadora da historia.))
                                                                       ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:30:43)
-- CODE: 
  print(.upper(Ada Lovelace foi a primeira programadora da historia.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada Lovelace foi a primeira programadora da historia.")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada Lovelace foi a primeira programadora da historia.")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:11:37)
-- CODE: 
print(.upper("Ada Lovelace foi a primeira programadora da historia.".lower)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia.".lower)
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia.".lower)
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:12:03)
-- CODE: 
print(upper(Äda Lovelace foi a primeira programadora da historia"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper(Äda Lovelace foi a primeira programadora da historia"))
                                                                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper(Äda Lovelace foi a primeira programadora da historia"))
                                                                    ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:37:29)
-- CODE: 
  print(.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 16:15:49)
-- CODE: 
  print(.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:10:28)
-- CODE: 
print(upper(Ada Lovelace foi a primeira programadora da historia.))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper(Ada Lovelace foi a primeira programadora da historia.))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper(Ada Lovelace foi a primeira programadora da historia.))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:36:30)
-- CODE: 
  print(.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:27:05)
-- CODE: 
print(.upper "Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper "Ada Lovelace foi a primeira programadora da historia")
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper "Ada Lovelace foi a primeira programadora da historia")
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:28:07)
-- CODE: 
  print(.upper(Ada Lovelace foi a promeira programadora da historia"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada Lovelace foi a promeira programadora da historia"))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada Lovelace foi a promeira programadora da historia"))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:12:02)
-- CODE: 
print(upper(Äda Lovelace foi a primeira programadora da historia"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper(Äda Lovelace foi a primeira programadora da historia"))
                                                                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper(Äda Lovelace foi a primeira programadora da historia"))
                                                                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:37:03)
-- CODE: 
  print(.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:11:05)
-- CODE: 
print(upper)(Ada Lovelace foi a primeira programadora da historia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper)(Ada Lovelace foi a primeira programadora da historia)
                 ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper)(Ada Lovelace foi a primeira programadora da historia)
                 ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:10:30)
-- CODE: 
print(upper(Ada Lovelace foi a primeira programadora da historia.))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper(Ada Lovelace foi a primeira programadora da historia.))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper(Ada Lovelace foi a primeira programadora da historia.))
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:10:45)
-- CODE: 
print(.upper("Ada Lovelace foi a primeira programadora da historia.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia.")
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia.")
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:26:40)
-- CODE: 
print(".upperAda Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
.upperAda Lovelace foi a primeira programadora da historia
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
.upperAda Lovelace foi a primeira programadora da historia
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:25:33)
-- CODE: 
print(.upper(Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada Lovelace foi a primeira programadora da historia")
                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada Lovelace foi a primeira programadora da historia")
                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:30:16)
-- CODE: 
  print(.upper(Ada lovelace foi a primeira programadora da historia.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada lovelace foi a primeira programadora da historia.")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada lovelace foi a primeira programadora da historia.")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:26:52)
-- CODE: 
print(".upper(Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
.upper(Ada Lovelace foi a primeira programadora da historia
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
.upper(Ada Lovelace foi a primeira programadora da historia
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 20:11:04)
-- CODE: 
print(upper)(Ada Lovelace foi a primeira programadora da historia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper)(Ada Lovelace foi a primeira programadora da historia)
                 ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 1
    print(upper)(Ada Lovelace foi a primeira programadora da historia)
                 ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
